--- a/notebooks/gmail_toolkit.ipynb
+++ b/notebooks/gmail_toolkit.ipynb
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A53758%2F&scope=https%3A%2F%2Fmail.google.com%2F&state=wQyPT0QSxchkStgobsNpNk6LmIZ58Q&access_type=offline\n"
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=69722697557-n13nrkrq7t630sthrt70fucdcmn19hsl.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A49804%2F&scope=https%3A%2F%2Fmail.google.com%2F&state=oqnuLKMd7TF2O1jXNwL1XV1hu0GWCq&access_type=offline\n"
      ]
     }
    ],
@@ -140,20 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[GmailCreateDraft(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
-       " GmailSendMessage(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
-       " GmailSearch(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
-       " GmailGetMessage(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>),\n",
-       " GmailGetThread(api_resource=<googleapiclient.discovery.Resource object at 0x10e4ec6e0>)]"
+       "[GmailCreateDraft(api_resource=<googleapiclient.discovery.Resource object at 0x10d16cfe0>),\n",
+       " GmailSendMessage(api_resource=<googleapiclient.discovery.Resource object at 0x10d16cfe0>),\n",
+       " GmailSearch(api_resource=<googleapiclient.discovery.Resource object at 0x10d16cfe0>),\n",
+       " GmailGetMessage(api_resource=<googleapiclient.discovery.Resource object at 0x10d16cfe0>),\n",
+       " GmailGetThread(api_resource=<googleapiclient.discovery.Resource object at 0x10d16cfe0>)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,14 +194,14 @@
      "output_type": "stream",
      "text": [
       "ContentString: \n",
-      "ToolCalls: [{'name': 'create_gmail_draft', 'args': {'message': 'Dear fake@fake.com,\\n\\nI wanted to take a moment to thank you for the delicious coffee you shared with me. It was a wonderful gesture and I truly appreciate it.\\n\\nLooking forward to catching up soon!\\n\\nBest regards,\\n[Your Name]', 'to': ['fake@fake.com'], 'subject': 'Thank You for the Coffee'}, 'id': 'call_DB85u0QpvrRHU9PpTZOgTTOf', 'type': 'tool_call'}]\n"
+      "ToolCalls: [{'name': 'search_gmail', 'args': {'query': 'from:tu_jefe@example.com', 'resource': 'messages', 'max_results': 1}, 'id': 'call_DwJOWOOAwZf66S0OI4SsaEb8', 'type': 'tool_call'}]\n"
      ]
     }
    ],
    "source": [
     "from langchain_core.messages import HumanMessage\n",
     "\n",
-    "response = model_with_tools.invoke([HumanMessage(content=\"Draft an email to fake@fake.com thanking them for coffee.\")])\n",
+    "response = model_with_tools.invoke([HumanMessage(content=\"Busca en mi correo el último mensaje de mi jefe, y respondele que lo he recibido.\")])\n",
     "\n",
     "print(f\"ContentString: {response.content}\")\n",
     "print(f\"ToolCalls: {response.tool_calls}\")"
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,32 +248,40 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "Draft an email to fake@fake.com thanking them for coffee.\n",
+      "Busca en mi correo el último mensaje de Amazon, y respondele que lo he recibido.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  create_gmail_draft (call_62XLSOSW5UbKVrjp814vYK7k)\n",
-      " Call ID: call_62XLSOSW5UbKVrjp814vYK7k\n",
+      "  search_gmail (call_OYpwabnl2E3RsRyLVbM1HiyS)\n",
+      " Call ID: call_OYpwabnl2E3RsRyLVbM1HiyS\n",
       "  Args:\n",
-      "    message: Dear Fake, \n",
-      "\n",
-      "I wanted to take a moment to thank you for the wonderful coffee we had together. It was great catching up with you. Let's do it again soon! \n",
-      "\n",
-      "Best regards, \n",
-      "[Your Name]\n",
-      "    to: ['fake@fake.com']\n",
-      "    subject: Thank You for Coffee\n",
+      "    query: from:amazon\n",
+      "    resource: messages\n",
+      "    max_results: 1\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: create_gmail_draft\n",
+      "Name: search_gmail\n",
       "\n",
-      "Draft created. Draft Id: r7508154190987601554\n",
+      "[{\"id\": \"192a102712a3bc8c\", \"threadId\": \"192a102712a3bc8c\", \"snippet\": \"Hola Jorge, ¡Tu paquete ya se entregó! Rastrea tu paquete Devuelve o reemplaza los artículos en Mis Pedidos. Pedido # 702-2226614-5973852. Este correo electrónico se envió desde una dirección que no\", \"body\": \"www.amazon.com.mx\\r\\n--------------------------------------------------------------------------------------------------------------------------------------------\\r\\n\\r\\nHola Jorge,\\r\\n\\r\\n\\r\\n¡Tu paquete ya se entregó!\\r\\n\\r\\n\\r\\nRastrea tu paquete:\\r\\nhttps://www.amazon.com.mx/gp/css/shiptrack/view.html?ie=UTF8&orderID=702-2226614-5973852&orderingShipmentId=829077629640000&packageId=1&ref_=E_301\\r\\n\\r\\n\\r\\nDevolver o reemplazar artículos en Tus Pedidos: \\r\\nhttps://www.amazon.com.mx/gp/css/order-history?ie=UTF8&ref_=E_301\\r\\n\\r\\n--------------------------------------------------------------------------------------------------------------------------------------------\\r\\nOrden N.º702-2226614-5973852\\r\\nhttps://www.amazon.com.mx/gp/css/summary/edit.html?ie=UTF8&orderID=702-2226614-5973852&ref_=E_301\\r\\nEste correo electrónico se envió desde una dirección que no puede recibir correos electrónicos. Por favor,no respondas este correo electrónico.\", \"subject\": \"=?UTF-8?B?RW50cmVnYWRvOiBUdSBwYXF1ZXRlIA==?=\\r\\n =?UTF-8?B?ZGUgQW1hem9uIHlhIHNlIGVudHJlZ8Oz?=\", \"sender\": \"\\\"Amazon.com.mx\\\" <order-update@amazon.com.mx>\"}]\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  send_gmail_message (call_t6fMsjbGl7UL1Uudpi5RkcIP)\n",
+      " Call ID: call_t6fMsjbGl7UL1Uudpi5RkcIP\n",
+      "  Args:\n",
+      "    message: He recibido tu mensaje y confirmo que mi paquete ya ha sido entregado.\n",
+      "    to: ['order-update@amazon.com.mx']\n",
+      "    subject: Confirmación de entrega\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: send_gmail_message\n",
+      "\n",
+      "Message sent. Message Id: 192c4977831913f8\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "I have created a draft email thanking fake@fake.com for the coffee. Would you like me to send it now?\n"
+      "He encontrado el último mensaje de Amazon y he respondido confirmando que he recibido la notificación de entrega.\n"
      ]
     }
    ],
    "source": [
-    "example_query = \"Draft an email to fake@fake.com thanking them for coffee.\"\n",
+    "# example_query = \"Draft an email to fake@fake.com thanking them for coffee.\"\n",
+    "example_query = \"Busca en mi correo el último mensaje de Amazon, y respondele que lo he recibido.\"\n",
     "\n",
     "events = agent_executor.stream(\n",
     "    {\"messages\": [(\"user\", example_query)]},\n",
