✨ Add update event tool

--- a/notebooks/calendar_toolkit.ipynb
+++ b/notebooks/calendar_toolkit.ipynb
@@ -83,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -476,8 +483,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,6 +586,13 @@
     "            \"'10': Basil, '11': Tomato.\"\n",
     "        )\n",
     "    )\n",
+    "    transparency: Optional[str] = Field(\n",
+    "        default=None, \n",
+    "        description=(\n",
+    "            \"User availability for the event.\"\n",
+    "            \"transparent for available and opaque for busy.\"\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "\n",
     "class CalendarCreateEvent(GoogleCalendarBaseTool):\n",
@@ -621,7 +642,8 @@
     "        attendees: Optional[List[str]] = None,\n",
     "        reminders: Union[None, bool, List[Dict[str, Any]]] = None,\n",
     "        conference_data: Optional[bool] = None,\n",
-    "        color_id: Optional[str] = None\n",
+    "        color_id: Optional[str] = None, \n",
+    "        transparency: Optional[str] = None\n",
     "    ) -> Dict[str, Any]:\n",
     "        \"\"\"Prepare the event body.\"\"\"\n",
     "        timezone = timezone or self._get_timezone(calendar_id)\n",
@@ -712,6 +734,9 @@
     "\n",
     "        if color_id:\n",
     "            event_body[\"colorId\"] = color_id\n",
+    "        \n",
+    "        if transparency:\n",
+    "            event_body[\"transparency\"] = transparency\n",
     "\n",
     "        return event_body\n",
     "\n",
@@ -729,9 +754,10 @@
     "        reminders: Union[None, bool, List[Dict[str, Any]]] = None,\n",
     "        conference_data: Optional[bool] = None,\n",
     "        color_id: Optional[str] = None,\n",
+    "        transparency: Optional[str] = None, \n",
     "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
     "    ) -> str:\n",
-    "        \"\"\"Run the tool to create a calendar event.\"\"\"\n",
+    "        \"\"\"Run the tool to create an event in Google Calendar.\"\"\"\n",
     "        try:\n",
     "            body = self._prepare_event(\n",
     "                summary=summary,\n",
@@ -745,7 +771,8 @@
     "                attendees=attendees,\n",
     "                reminders=reminders,\n",
     "                conference_data=conference_data,\n",
-    "                color_id=color_id\n",
+    "                color_id=color_id, \n",
+    "                transparency=transparency\n",
     "            )\n",
     "\n",
     "            conference_version = 1 if conference_data else 0\n",
@@ -889,7 +916,7 @@
     "        query: Optional[str] = None,\n",
     "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
     "    ) -> List[Dict[str, Optional[str]]]:\n",
-    "        \"\"\"Run the tool.\"\"\"\n",
+    "        \"\"\"Run the tool to search events in Google Calendar.\"\"\"\n",
     "        try:\n",
     "            calendars_info = self._get_calendars_info()\n",
     "            calendars = self._get_calendar_ids(calendars_info)\n",
@@ -920,6 +947,294 @@
     "            return self._process_data_events(events)\n",
     "        except Exception as error:\n",
     "            raise Exception(f\"An error occurred while fetching events: {error}\") from error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Update an event in Google Calendar.\"\"\" # NUEVO\n",
+    "\n",
+    "from datetime import datetime\n",
+    "from typing import Any, Dict, List, Optional, Type, Union\n",
+    "from uuid import uuid4\n",
+    "import re\n",
+    "\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from langchain_core.callbacks import CallbackManagerForToolRun\n",
+    "\n",
+    "\n",
+    "class UpdateEventSchema(BaseModel):\n",
+    "    \"\"\"Input for CalendarUpdateEvent.\"\"\"\n",
+    "\n",
+    "    event_id: str = Field(\n",
+    "        ..., \n",
+    "        description=\"The event ID to update.\"\n",
+    "    )\n",
+    "    calendar_id: str = Field(\n",
+    "        default=\"primary\",\n",
+    "        description=\"The calendar ID to create the event in.\"\n",
+    "    )\n",
+    "    summary: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"The title of the event.\"\n",
+    "    )\n",
+    "    start_datetime: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"The new start datetime for the event in 'YYYY-MM-DD HH:MM:SS' format. \"\n",
+    "            \"If the event is an all-day event, set the time to 'YYYY-MM-DD' format.\"\n",
+    "        )\n",
+    "    )\n",
+    "    end_datetime: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"The new end datetime for the event in 'YYYY-MM-DD HH:MM:SS' format. \"\n",
+    "            \"If the event is an all-day event, set the time to 'YYYY-MM-DD' format.\"\n",
+    "        )\n",
+    "    )\n",
+    "    timezone: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"The timezone of the event.\"\n",
+    "    )\n",
+    "    recurrence: Optional[Dict[str, Any]] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"The recurrence of the event. \"\n",
+    "            \"Format: {'FREQ': <'DAILY' or 'WEEKLY'>, 'INTERVAL': <number>, \"\n",
+    "            \"'COUNT': <number or None>, 'UNTIL': <'YYYYMMDD' or None>, \"\n",
+    "            \"'BYDAY': <'MO', 'TU', 'WE', 'TH', 'FR', 'SA', 'SU' or None>}. \"\n",
+    "            \"Use either COUNT or UNTIL, but not both; set the other to None.\"\n",
+    "        )\n",
+    "    )\n",
+    "    location: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"The location of the event.\"\n",
+    "    )\n",
+    "    description: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"The description of the event.\"\n",
+    "    )\n",
+    "    attendees: Optional[List[str]] = Field(\n",
+    "        default=None,\n",
+    "        description=\"A list of attendees' email addresses for the event.\"\n",
+    "    )\n",
+    "    reminders: Union[None, bool, List[Dict[str, Any]]] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"Reminders for the event. \"\n",
+    "            \"Set to True for default reminders, or provide a list like \"\n",
+    "            \"[{'method': 'email', 'minutes': <minutes>}, ...]. \"\n",
+    "            \"Valid methods are 'email' and 'popup'.\"\n",
+    "        )\n",
+    "    )\n",
+    "    conference_data: Optional[bool] = Field(\n",
+    "        default=None,\n",
+    "        description=\"Whether to include conference data.\"\n",
+    "    )\n",
+    "    color_id: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"The color ID of the event. None for default. \"\n",
+    "            \"'1': Lavender, '2': Sage, '3': Grape, '4': Flamingo, '5': Banana, \"\n",
+    "            \"'6': Tangerine, '7': Peacock, '8': Graphite, '9': Blueberry, \"\n",
+    "            \"'10': Basil, '11': Tomato.\"\n",
+    "        )\n",
+    "    )\n",
+    "    transparency: Optional[str] = Field(\n",
+    "        default=None, \n",
+    "        description=(\n",
+    "            \"User availability for the event.\"\n",
+    "            \"transparent for available and opaque for busy.\"\n",
+    "        )\n",
+    "    )\n",
+    "    send_updates: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"Whether to send updates to attendees. \"\n",
+    "            \"Allowed values are 'all', 'externalOnly', or 'none'.\"\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class CalendarUpdateEvent(GoogleCalendarBaseTool):\n",
+    "    \"\"\"Tool that updates an event in Google Calendar.\"\"\"\n",
+    "\n",
+    "    name: str = \"update_calendar_event\"\n",
+    "    description: str = \"Use this tool to update an event. \"\n",
+    "    args_schema: Type[UpdateEventSchema] = UpdateEventSchema\n",
+    "\n",
+    "    def _get_event(self, event_id: str, calendar_id: str = 'primary') -> Dict[str, Any]:\n",
+    "        \"\"\"Get the event by ID.\"\"\"\n",
+    "        event = self.api_resource.events().get(calendarId=calendar_id, eventId=event_id).execute()\n",
+    "        return event\n",
+    "    \n",
+    "    def _is_all_day_event(self, start_datetime: str, end_datetime: str) -> bool:\n",
+    "        \"\"\"Check if the event is an all-day event.\"\"\"\n",
+    "        date_format = \"%Y-%m-%d\"\n",
+    "        try:\n",
+    "            datetime.strptime(start_datetime, date_format)\n",
+    "            datetime.strptime(end_datetime, date_format)\n",
+    "            return True\n",
+    "        except ValueError:\n",
+    "            return False\n",
+    "\n",
+    "    def _refactor_event(\n",
+    "        self,\n",
+    "        event: Dict[str, Any],\n",
+    "        summary: Optional[str] = None,\n",
+    "        start_datetime: Optional[str] = None,\n",
+    "        end_datetime: Optional[str] = None,\n",
+    "        timezone: Optional[str] = None,\n",
+    "        recurrence: Optional[Dict[str, Any]] = None,\n",
+    "        location: Optional[str] = None,\n",
+    "        description: Optional[str] = None,\n",
+    "        attendees: Optional[List[str]] = None,\n",
+    "        reminders: Union[None, bool, List[Dict[str, Any]]] = None,\n",
+    "        conference_data: Optional[bool] = None,\n",
+    "        color_id: Optional[str] = None, \n",
+    "        transparency: Optional[str] = None\n",
+    "    ) -> Dict[str, Any]:\n",
+    "        \"\"\"Refactor the event body.\"\"\"\n",
+    "\n",
+    "        if summary is not None:\n",
+    "            event['summary'] = summary\n",
+    "\n",
+    "        try: \n",
+    "            if start_datetime and end_datetime:\n",
+    "                if self._is_all_day_event(start_datetime, end_datetime):\n",
+    "                    event['start'] = {\"date\": start_datetime}\n",
+    "                    event['end'] = {\"date\": end_datetime}\n",
+    "                else:\n",
+    "                    datetime_format = \"%Y-%m-%d %H:%M:%S\"\n",
+    "                    timezone = timezone or event['start']['timeZone']\n",
+    "                    start_dt = datetime.strptime(start_datetime, datetime_format)\n",
+    "                    end_dt = datetime.strptime(end_datetime, datetime_format)\n",
+    "                    event['start'] = {\n",
+    "                        \"dateTime\": start_dt.astimezone().isoformat(),\n",
+    "                        \"timeZone\": timezone\n",
+    "                    }\n",
+    "                    event['end'] = {\n",
+    "                        \"dateTime\": end_dt.astimezone().isoformat(),\n",
+    "                        \"timeZone\": timezone\n",
+    "                    }\n",
+    "        except ValueError as error:\n",
+    "            raise ValueError(\"The datetime format is incorrect.\") from error\n",
+    "\n",
+    "        if (recurrence is not None) and (isinstance(recurrence, dict)):\n",
+    "            recurrence_items = [f\"{k}={v}\" for k, v in recurrence.items() if v is not None]\n",
+    "            event.update({'recurrence': ['RRULE:' + ';'.join(recurrence_items)]})\n",
+    "\n",
+    "        if location is not None:\n",
+    "            event.update({'location': location})\n",
+    "\n",
+    "        if description is not None:\n",
+    "            event.update({'description': description})\n",
+    "\n",
+    "        if attendees is not None:\n",
+    "            attendees_emails = []\n",
+    "            email_pattern = r'^[^@]+@[^@]+\\.[^@]+$'\n",
+    "            for email in attendees:\n",
+    "                if not re.match(email_pattern, email):\n",
+    "                    raise ValueError(f\"Invalid email address: {email}\")\n",
+    "                attendees_emails.append({\"email\": email})\n",
+    "            event.update({'attendees': attendees_emails})\n",
+    "\n",
+    "        if reminders is not None:\n",
+    "            if reminders is True:\n",
+    "                event.update({'reminders': {\"useDefault\": True}})\n",
+    "            elif isinstance(reminders, list):\n",
+    "                for reminder in reminders:\n",
+    "                    if 'method' not in reminder or 'minutes' not in reminder:\n",
+    "                        raise ValueError(\"Each reminder must have 'method' and 'minutes' keys.\")\n",
+    "                    if reminder['method'] not in ['email', 'popup']:\n",
+    "                        raise ValueError(\"The reminder method must be 'email' or 'popup'.\")\n",
+    "                event.update({'reminders': {\"useDefault\": False, \"overrides\": reminders}})\n",
+    "            else:\n",
+    "                event.update({'reminders': {\"useDefault\": False}})\n",
+    "\n",
+    "        if (conference_data is not None) and (conference_data == True):\n",
+    "                event.update({'conferenceData': {\n",
+    "                    \"createRequest\": {\n",
+    "                        \"requestId\": str(uuid4()),\n",
+    "                        \"conferenceSolutionKey\": {\n",
+    "                            \"type\": \"hangoutsMeet\"\n",
+    "                        }\n",
+    "                    }}\n",
+    "                })\n",
+    "        else:\n",
+    "            event.update({'conferenceData': None})\n",
+    "\n",
+    "        if color_id is not None:\n",
+    "            event['colorId'] = color_id\n",
+    "\n",
+    "        if transparency is not None:\n",
+    "            event.update({'transparency': transparency})\n",
+    "\n",
+    "        return event\n",
+    "\n",
+    "    def _run(\n",
+    "        self,\n",
+    "        event_id: str,\n",
+    "        summary: str,\n",
+    "        start_datetime: str,\n",
+    "        end_datetime: str,\n",
+    "        calendar_id: str = 'primary',\n",
+    "        timezone: Optional[str] = None,\n",
+    "        recurrence: Optional[Dict[str, Any]] = None,\n",
+    "        location: Optional[str] = None,\n",
+    "        description: Optional[str] = None,\n",
+    "        attendees: Optional[List[str]] = None,\n",
+    "        reminders: Union[None, bool, List[Dict[str, Any]]] = None,\n",
+    "        conference_data: Optional[bool] = None,\n",
+    "        color_id: Optional[str] = None,\n",
+    "        transparency: Optional[str] = None, \n",
+    "        send_updates: Optional[str] = None,\n",
+    "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
+    "    ) -> str:\n",
+    "        \"\"\"Run the tool to update an event in Google Calendar.\"\"\"\n",
+    "        try:\n",
+    "            event = self._get_event(event_id, calendar_id)\n",
+    "            body = self._refactor_event(\n",
+    "                event=event,\n",
+    "                summary=summary,\n",
+    "                start_datetime=start_datetime,\n",
+    "                end_datetime=end_datetime,\n",
+    "                calendar_id=calendar_id,\n",
+    "                timezone=timezone,\n",
+    "                recurrence=recurrence,\n",
+    "                location=location,\n",
+    "                description=description,\n",
+    "                attendees=attendees,\n",
+    "                reminders=reminders,\n",
+    "                conference_data=conference_data,\n",
+    "                color_id=color_id, \n",
+    "                transparency=transparency\n",
+    "            )\n",
+    "\n",
+    "            conference_version = 1 if conference_data else 0\n",
+    "\n",
+    "            result = self.api_resource.events().update(\n",
+    "                calendarId=calendar_id,\n",
+    "                eventId=event_id,\n",
+    "                body=body,\n",
+    "                conferenceDataVersion=conference_version, \n",
+    "                sendUpdates=send_updates\n",
+    "            ).execute()\n",
+    "\n",
+    "            return result.get('htmlLink')\n",
+    "        except Exception as error:\n",
+    "            raise Exception(f\"An error occurred: {error}\") from error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
