🐛 fix parameter use

--- a/notebooks/calendar.ipynb
+++ b/notebooks/calendar.ipynb
@@ -822,10 +822,9 @@
     "events = Calendar.get_events(service)\n",
     "event = Calendar.get_event(service, \n",
     "                           eventId=events[0]['id'],\n",
-    "                           calendarId=events[0]['organizer'],\n",
-    "                           send_updates='all')\n",
+    "                           calendarId=events[0]['organizer'])\n",
     "\n",
-    "Calendar.move_event(service, eventId=event['id'], destination=calendars[1]['id'], )"
+    "Calendar.move_event(service, eventId=event['id'], destination=calendars[1]['id'], send_updates='all')"
    ]
   },
   {
