--- a/notebooks/calendar_toolkit.ipynb
+++ b/notebooks/calendar_toolkit.ipynb
@@ -1231,6 +1231,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Move an event between calendars in Google Calendar.\"\"\" # NUEVO\n",
+    "\n",
+    "from typing import Optional, Type\n",
+    "\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from langchain_core.callbacks import CallbackManagerForToolRun\n",
+    "\n",
+    "\n",
+    "class MoveEventSchema(BaseModel):\n",
+    "    \"\"\"Input for CalendarMoveEvent.\"\"\"\n",
+    "\n",
+    "    event_id: str = Field(\n",
+    "        ..., \n",
+    "        description=\"The event ID to move.\"\n",
+    "    )\n",
+    "    origin_calenddar_id: str = Field(\n",
+    "        ..., \n",
+    "        description=\"The origin calendar ID.\"\n",
+    "    )\n",
+    "    destination_calendar_id: str = Field(\n",
+    "        ...,\n",
+    "        description=\"The destination calendar ID.\"\n",
+    "    )\n",
+    "    send_updates: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"Whether to send updates to attendees.\"\n",
+    "            \"Allowed values are 'all', 'externalOnly', or 'none'.\"\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class CalendarMoveEvent(GoogleCalendarBaseTool):\n",
+    "    \"\"\"Tool that move an event between calendars in Google Calendar.\"\"\"\n",
+    "\n",
+    "    name: str = \"move_calendar_event\"\n",
+    "    description: str = \"Use this tool to move an event between calendars.\"\n",
+    "    args_schema: Type[MoveEventSchema] = MoveEventSchema\n",
+    "        \n",
+    "    def _run(\n",
+    "        self, \n",
+    "        event_id: str, \n",
+    "        origin_calendar_id: str, \n",
+    "        destination_calendar_id: str,\n",
+    "        send_updates: Optional[str] = None,\n",
+    "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
+    "    ) -> str:\n",
+    "        \"\"\"Run the tool to update an event in Google Calendar.\"\"\"\n",
+    "        try: \n",
+    "            result = self.api_resource.events().move(\n",
+    "                eventId=event_id,\n",
+    "                calendarId=origin_calendar_id,\n",
+    "                destination=destination_calendar_id,\n",
+    "                sendUpdates=send_updates\n",
+    "            ).execute()\n",
+    "            return result.get('htmlLink') \n",
+    "        except Exception as error:\n",
+    "            raise Exception(f\"An error occurred: {error}\") from error"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1453,7 +1520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "zolkin-backend-dA_7IZFM",
+   "display_name": "zolkin-backend-4QPfsSn2",
    "language": "python",
    "name": "python3"
   },
