✨ Add tool to retrieve information about Google Calendars

--- a/notebooks/calendar_toolkit.ipynb
+++ b/notebooks/calendar_toolkit.ipynb
@@ -1236,6 +1236,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Get information about the calendars in Google Calendar.\"\"\" # NUEVO\n",
+    "\n",
+    "from typing import Optional, List, Dict\n",
+    "\n",
+    "from langchain_core.callbacks import CallbackManagerForToolRun\n",
+    "\n",
+    "\n",
+    "class GetCalendarsInfo(GoogleCalendarBaseTool):\n",
+    "    \"\"\"Tool that get information about the calendars in Google Calendar.\"\"\"\n",
+    "\n",
+    "    name: str = \"get_calendars_info\"\n",
+    "    description: str = \"Use this tool to get information about the calendars in Google Calendar.\"\n",
+    "\n",
+    "    def _run(\n",
+    "            self, \n",
+    "            run_manager: Optional[CallbackManagerForToolRun] = None\n",
+    "        ) -> List[Dict[str, str]]:\n",
+    "        \"\"\"Run the tool to get information about the calendars in Google Calendar.\"\"\"\n",
+    "        try: \n",
+    "            calendars = self.api_resource.calendarList().list().execute() \n",
+    "            data = []\n",
+    "            for item in calendars.get('items', []):\n",
+    "                if item['accessRole'] != 'reader':\n",
+    "                    data.append({\n",
+    "                        'id': item['id'], \n",
+    "                        'summary': item['summary'],\n",
+    "                        'timeZone': item['timeZone']})\n",
+    "            return data\n",
+    "        except Exception as error:\n",
+    "            raise Exception(f\"An error occurred: {error}\") from error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"Move an event between calendars in Google Calendar.\"\"\" # NUEVO\n",
     "\n",
     "from typing import Optional, Type\n",
