--- a/notebooks/calendar_toolkit.ipynb
+++ b/notebooks/calendar_toolkit.ipynb
@@ -1336,6 +1336,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Delete an event in Google Calendar.\"\"\" # NUEVO\n",
+    "\n",
+    "from typing import Optional, Type\n",
+    "\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from langchain_core.callbacks import CallbackManagerForToolRun\n",
+    "\n",
+    "\n",
+    "class DeleteEventSchema(BaseModel):\n",
+    "    \"\"\"Input for CalendarDeleteEvent.\"\"\"\n",
+    "\n",
+    "    event_id: str = Field(\n",
+    "        ..., \n",
+    "        description=\"The event ID to delete.\"\n",
+    "    )\n",
+    "    calendar_id: Optional[str] = Field(\n",
+    "        default=\"primary\", \n",
+    "        description=\"The origin calendar ID.\"\n",
+    "    )\n",
+    "    send_updates: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=(\n",
+    "            \"Whether to send updates to attendees.\"\n",
+    "            \"Allowed values are 'all', 'externalOnly', or 'none'.\"\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class CalendarDeleteEvent(GoogleCalendarBaseTool):\n",
+    "    \"\"\"Tool that delete an event in Google Calendar.\"\"\"\n",
+    "\n",
+    "    name: str = \"delete_calendar_event\"\n",
+    "    description: str = \"Use this tool to delete an event.\"\n",
+    "    args_schema: Type[DeleteEventSchema] = DeleteEventSchema\n",
+    "        \n",
+    "    def _run(\n",
+    "        self, \n",
+    "        event_id: str, \n",
+    "        calendar_id: Optional[str] = 'primary', \n",
+    "        send_updates: Optional[str] = None,\n",
+    "        run_manager: Optional[CallbackManagerForToolRun] = None\n",
+    "    ) -> None:\n",
+    "        \"\"\"Run the tool to delete an event in Google Calendar.\"\"\"\n",
+    "        try: \n",
+    "            self.api_resource.events().delete(\n",
+    "                eventId=event_id,\n",
+    "                calendarId=calendar_id,\n",
+    "                sendUpdates=send_updates\n",
+    "            ).execute()\n",
+    "        except Exception as error:\n",
+    "            raise Exception(f\"An error occurred: {error}\") from error"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
